# FastTrackV2

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yml  justfile  pyproject.toml
.github/workflows/: ci.yaml
scripts/: django
src/: manage.py
src/config/: asgi.py  urls.py  wsgi.py
src/config/settings/: base.py  dev.py  prod.py  test.py
